@@ -1,6 +1,7 @@
-2010-08-11  Satoshi Konno <skonno@cybergarage.org>
+2010-08-17  Satoshi Konno <skonno@cybergarage.org>
 	* Changed some source codes to compile normally using Visual Studio 2008.
 	* Added some project files for Visual Studio 2008.
+	* Changed CGUpnpAvServer:browse:browseFlag:withRequestedCount to support WAC7500 based on TwonkyMedia UPnP SDK/1.1.
 	
 2010-07-31 Roman Shterenzon <romanbsd@yahoo.com>
 	* Fixed autoconf warnings
